fix: add service-prefix property

--- a/openapi-gateway-endpoints/openapi-gateway-rest-api/src/main/resources/application.yaml
+++ b/openapi-gateway-endpoints/openapi-gateway-rest-api/src/main/resources/application.yaml
@@ -17,4 +17,4 @@ management:
 springdoc:
   swagger-ui:
     path: /
-    config-url: /swagger-config.json
+    config-url: /openapi-gateway/swagger-config.json
