--- a/openapi-gateway-endpoints/openapi-gateway-rest-api/src/main/resources/application-local.yaml
+++ b/openapi-gateway-endpoints/openapi-gateway-rest-api/src/main/resources/application-local.yaml
@@ -2,9 +2,9 @@ openapi:
   endpoints:
     customer-orchestration:
       gateway-prefix: /customer-orchestration
-      service-url: http://localhost:8081
+      service-url: http://localhost2:8081
       service-path: /v3/api-docs
     customer-entity:
       gateway-prefix: /customer-entity
-      service-url: http://localhost:8082
+      service-url: http://localhost2:8082
       service-path: /v3/api-docs
