build: ignore certain yarn advisories

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,10 +58,10 @@ jobs:
         with:
           node-version: '12.x'
 
-      #      - name: Yarn Audit
-      #        run: |
-      #          yarn install --frozen-lockfile
-      #          yarn audit --level moderate
+      - name: Yarn Audit
+        run: |
+          yarn install --frozen-lockfile
+          bash scripts/yarn-audit.sh
 
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
