fix: update to latest common to pick up mutable dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,4 @@ springBootPluginVersion = 2.3.1.RELEASE
 versionsPluginVersion = 0.28.0
 spotbugsToolVersion = 4.0.6
 jacocoToolVersion = 0.8.5
-commonVersion = 2.3.1
+commonVersion = latest.release
