--- a/openapi-gateway-endpoints/openapi-gateway-rest-api/src/main/resources/bootstrap.yml
+++ b/openapi-gateway-endpoints/openapi-gateway-rest-api/src/main/resources/bootstrap.yml
@@ -3,6 +3,8 @@ spring:
     name: ms-openapi-gateway
   cloud:
     kubernetes:
+      reload:
+        enabled: true
       secrets:
         enabled: true
         paths: /etc/secrets
