build: use anchore/scan-action v2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,9 +96,9 @@ jobs:
         run: ./gradlew openapi-gateway-endpoints:openapi-gateway-rest-api:bootBuildImage --imageName build:latest
 
       - name: Docker Scan
-        uses: anchore/scan-action@master
+        uses: anchore/scan-action@v2
         with:
-          image-reference: "build:latest"
+          image: "build:latest"
           fail-build: true
 
       - name: Semantic Release
